--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Mbun Ryan's Portfolio." />
+    <meta name="apple-mobile-web-app-title" content="Mbun Ryan's Portfolio" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>Mbun Ryan's Portfolio</title>
+    <title>Mbun Ryan</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
@@ -36,7 +36,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = '4051700157';
+      var serviceWorkerVersion = '650489917';
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
